java {
	toolchain {
		languageVersion.set(JavaLanguageVersion.of(17))
	}
}
dependencies {
	compileOnly group: "com.liferay.portal", name: "release.dxp.api", version: "2025.q1.12"
	compileOnly group: "org.codehaus.groovy", name: "groovy-all", version: "2.4.21"
	compileOnly group: "org.osgi", name: "org.osgi.service.cm", version: "1.6.0"
	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.4.0"
	compileOnly group: "org.slf4j", name: "slf4j-api", version: "1.7.26"
}
